--- a/src/app/components/schedule/schedule.component.css
+++ b/src/app/components/schedule/schedule.component.css
@@ -251,69 +251,61 @@
   margin-top: 70px;
 }
 
-.popup .overlay {
-  position:fixed;
-  top:0px;
-  left:0px;
-  width:100vw;
-  height:100vh;
-  background:rgba(0,0,0,0.7);
-  z-index:1;
-  display:none;
+
+
+/* new popup */
+
+.buttonSubmit{
+  text-transform: uppercase;
+  position: relative;
+  padding: 15px 30px;
+  color: #fff;
+  background: #ed3330;
+  border: none;
+  border-radius: 5px;
+  transition: all 0.4s ease 0s;
+}
+.buttonSubmit#buttonSubmit{
+  margin-left: 45%;
+}
+.buttonSubmit#sendRequest{
+  margin-left: 30%;
+}
+.buttonSubmit:hover {
+  background: #434343;
+  letter-spacing: 1px;
+  -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+  -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+  box-shadow: 5px 40px -10px rgba(0, 0, 0, 0.57);
+  transition: all 0.4s ease 0s;
 }
 
-.popup .content {
-  margin-top: 800px;
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%,-50%) scale(0);
-  background:#fff;
-  width:700px;
-  height:500px;
-  z-index:2;
-  padding:20px;
-  box-sizing:border-box;
-  font-family:"Open Sans",sans-serif;
+#popup, #popup2
+{
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    padding: 50px;
+    box-shadow: 0 5px 30px rgba(0,0,0,.30);
+    background: #fff;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
 }
-
-.popup .close-btn {
-  cursor:pointer;
-  position:absolute;
-  right:20px;
-  top:20px;
-  width:30px;
-  height:30px;
-  background:#222;
-  color:#fff;
-  font-size:25px;
-  font-weight:600;
-  line-height:30px;
-  text-align:center;
-  border-radius:50%;
+#popup.active, #popup2.active 
+{   
+    top: 50%;
+    visibility: visible;
+    opacity: 1;
+    transition: 0.5s;
 }
-
-.popup.active .overlay {
-  display:block;
+.container{
+  position: relative;
 }
-
-.popup.active .content {
-  transition:all 300ms ease-in-out;
-  transform:translate(-50%,-50%) scale(1);
-}
-.closeBtn{
-  margin-top: -10px;
-  margin-left: 640px;
-  cursor:pointer;
-  right:30px;
-  top:20px;
-  width:30px;
-  height:30px;
-  background:#222;
-  color:#fff;
-  font-size:25px;
-  font-weight:600;
-  line-height:30px;
-  text-align:center;
-  border-radius:50%;
+.container#blur.active{
+  filter: blur(1px);
+  pointer-events: none;
+  user-select: none;
 }
